0.7.1
    * fix output resolution for non h264/h265 sources
    * add tab completion
    * some extra info prints on startup
0.7.0
    * fetch image stats from pipe info json before init when available
    * flush pipe on backup
    * support source pipe connecting and restarting
0.6.3
    * new --standalone argument to support multiple instances
    * fix non h264/h265 streams
0.6.2
    * move default source again to hires_small_encoded
0.6.1
    * move default source to hires_small_h264
0.6.0
    * bring config file creation, reading, and configuration up to minimum spec
0.5.1
    * only open pipe from camera server when there is >=1 rtsp client
0.5.0
    * support pre-encoded h264 input (preliminary POC)
0.4.3
    * Fix configurator not reading port number
0.4.2
    * Teardown request handling fix
0.4.1
    * Remove configure in postinst
0.4.0
    * Major rewrite, only mpa source now and config file is much sparser
0.3.6
    * add back accidentally removed service file
0.3.5
    * add back accidentally removed config file
0.3.4
    * one service file again since omx working on both
0.3.3
    * update omx parameter to work on QRB
0.3.2
    * add color stereo (only sends one)
0.3.1
    * clean up noisy postinst
0.3.0
    * update arch to arm64
0.2.9
    * New CI Stuff
0.2.8
    * Added support for qrb5165.
    * Added support for software h264 encoder.
0.2.7
    * Added support for new YUV422 variant.
    * Added new configuration record to support voxl-uvc-server.
0.2.6
    * patch small config file bug
0.2.5
    * move template conf to /usr/share/modalai
0.2.4
    * update hires pipe name to follow camera server 0.8.0+
0.2.3
    * update to use libmodal_pipe 2
0.2.2
    * add bash completions for config name
0.2.1
    * Updated to newer install_build_deps.sh script that picks whether to use
      dev or stable package repo
0.2.0
    * Updates to configuration file for MPA path changes
    * Changed default rotation for hires to 0 in configuration file
0.1.9